--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -3,6 +3,7 @@ html {
     scroll-behavior: smooth;
 }
 
+
 /*========================= ALLGEMEIN =========================*/
 body, p {
     position: relative;
@@ -107,6 +108,18 @@ body, p {
 
     .errorMessage{
         color: #bd45a3;
+    }
+
+    .messagebox{
+        position: fixed;
+        z-index: 9999;
+        width: 80%;
+        height: 20rem;
+        bottom: 12rem;
+        background-color: rgba(250,250,250,1);
+        border: 4px solid #bd45a3;
+        visibility: visible;
+        transition: 1s all;
     }
 
 }
@@ -257,6 +270,34 @@ button .navbar-toggler {
 }
 
 
+
+
+/*========================= NEWS =============================*/
+// #news_section{
+//     position: relative;
+//     margin-top: 5rem;
+// }
+
+.news-bg{
+    background: url('/img/section_news/silvester_2021_terrasse.jpg') 60% 10rem fixed no-repeat;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    // margin-top: 5rem;
+}
+
+#news{
+    position: relative;
+    z-index: 9999;
+}
+
+.news-images{
+    position: relative;
+    max-width: 100%;
+
+}
+
+
 /*========================= Pregnancy =========================*/
 .pregnacy-bg{
     background: url('/img/gh_kampl_styria.jpg') 60% 3rem fixed no-repeat;
@@ -289,10 +330,10 @@ button .navbar-toggler {
 /*========================= Quotes =========================*/
 #quotes{
     width: 100%;
-    height: 30vh;
+    height: 50vh;
     margin: 0;
     padding: 0;
-    background: url('/img/kleine_kanzel_2020_2.jpg') 50% 6rem fixed no-repeat;
+    background: url('/img/kleine_kanzel_2020_2.jpg') 50% -15rem fixed no-repeat;
     background-size: cover;
       
     /* Medium devices (landscape tablets, 768px and up) */
@@ -301,7 +342,7 @@ button .navbar-toggler {
         height: 30vh;
         margin: 0;
         padding: 0;
-        background: url('/img/kleine_kanzel_2020_2.jpg') 66% 13rem fixed no-repeat;
+        background: url('/img/kleine_kanzel_2020_2.jpg') 66% -10rem fixed no-repeat;
         background-size: cover;
     } 
 
