--- a/public/views/includes/header.ejs
+++ b/public/views/includes/header.ejs
@@ -52,22 +52,22 @@
                     <div class="collapse navbar-collapse justify-content-end text-uppercase" id="navbartoggle">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/#home" class="nav-link active">Home</a>
+                                <a href="#home" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/#aboutUs" class="nav-link">About us</a>
+                                <a href="#aboutUs" class="nav-link">About us</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/#news" class="nav-link">News</a>
+                                <a href="#news_section" class="nav-link">News</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/#pregnant" class="nav-link">Pregnancy</a>
+                                <a href="#pregnant" class="nav-link">Pregnancy</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/#quotes" class="nav-link">Quotes</a>
+                                <a href="#quotes" class="nav-link">Quotes</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/#comments" class="nav-link">Add comment</a>
+                                <a href="#comments" class="nav-link">Add comment</a>
                             </li>
                         </ul>
                     </div>
